= master

* Add timestamp_public plugin for serving static files with paths that change based on modify timestamp (jeremyevans)

= 3.1.0 (2017-10-13)

* Make set_layout_locals and set_view_locals in branch_locals plugin work when the other is not called (jeremyevans)

* Add :timestamp_paths option to assets plugin to include timestamps in paths in non-compiled mode (jeremyevans)

* Handle ExecJS::RuntimeUnavailable when testing for javascript compression support using uglifier (jeremyevans)

* Remove deprecated Roda.thread_safe_cache and RodaRequest#placeholder_string_matcher? methods (jeremyevans)

= 3.0.0 (2017-09-15)

* Make defined symbol_matcher and hash_matcher match methods private (jeremyevans)

* Use public_send instead of send unless calling private methods is expected (jeremyevans)

* Compute multi_run regexp when freezing app to avoid thread safety issues at runtime (jeremyevans)

* Remove deprecated support for using undefined multi_route namespaces when routing (jeremyevans)

* Make it possible to reset :include_request options to false for json and json_parser plugins (jeremyevans)

* Deprecate RodaRequest#placeholder_string_matcher? private method (jeremyevans)

* Deprecate Roda.thread_safe_cache, use RodaCache directly (jeremyevans)

* Make using an app as middleware always create a subclass of the app (jeremyevans)

* Enable SHA256 subresource integrity by default in assets plugin (jeremyevans)

* Make subclassing a roda app always inherit the render cache (jeremyevans)

* Make :cache=>nil render plugin option still allow caching via :cache render method option (jeremyevans)

* Make content_for plugin append to existing content by default (jeremyevans)

* Make :host matcher in the header_matchers plugin always yield captures if given a regexp (jeremyevans)

* Make :header matcher in the header_matchers plugin now always prefix header with HTTP_ (jeremyevans)
